# izhikevich

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
output/: readme.txt
src/: izhikevich.cpp
